[workspace]
members = ["contracts/*", "packages/*", "interface"]

[profile.release]
rpath = false
lto = true
overflow-checks = true

[workspace.dependencies]
cw20-base = { package = "abstract-cw20-base", features = [
    "library",
], git = "https://github.com/AbstractSDK/cw-plus", ref = "690b4ea" }
cw20 = { package = "abstract-cw20", git = "https://github.com/AbstractSDK/cw-plus", ref = "690b4ea" }
cw2 = { package = "abstract-cw2", git = "https://github.com/AbstractSDK/cw-plus", ref = "690b4ea" }
cosmwasm-storage = { version = "1.1.0" }
cosmwasm-std = { version = "1.1.0" }
cosmwasm-schema = { version = "1.1.0" }
cw-storage-plus = { version = "0.15.1" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
