[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cw-orch.workspace = true
cw-orch-fork-mock.workspace = true
interface = { version = "0.1.0", path = "../interface" }
pretty_env_logger = "0.5.0"
